// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/team/TeamDetails should match snapshot 1`] = `
<div
  className="wrapper--fixed"
>
  <div
    className="admin-console__header with-back"
  >
    <div>
      <Connect(BlockableLink)
        className="fa fa-angle-left back"
        to="/admin_console/user_management/teams"
      />
      <MemoizedFormattedMessage
        defaultMessage="Team Configuration"
        id="admin.team_settings.team_detail.group_configuration"
      />
    </div>
  </div>
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <TeamProfile
        isArchived={false}
        onToggleArchive={[Function]}
        team={
          Object {
            "allow_open_invite": false,
            "allowed_domains": "",
            "delete_at": 0,
            "display_name": "team",
            "group_constrained": false,
            "id": "123",
          }
        }
      />
      <ConfirmModal
        confirmButtonClass="btn btn-primary"
        confirmButtonText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Archive"
            id="admin.team_settings.team_detail.archive_confirm.button"
          />
        }
        message={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Saving will archive the team and make its contents inaccessible for all users. Are you sure you wish to save and archive this team?"
            id="admin.team_settings.team_detail.archive_confirm.message"
          />
        }
        modalClass=""
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Save and Archive Team"
            id="admin.team_settings.team_detail.archive_confirm.title"
          />
        }
      />
      <RemoveConfirmModal
        amount={0}
        inChannel={false}
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
      />
      <TeamModes
        allAllowedChecked={false}
        allowedDomains=""
        allowedDomainsChecked={false}
        onToggle={[Function]}
        syncChecked={false}
      />
      <TeamGroups
        groups={
          Array [
            Object {
              "display_name": "DN",
              "id": "123",
              "member_count": 3,
            },
          ]
        }
        onAddCallback={[Function]}
        onGroupRemoved={[Function]}
        removedGroups={Array []}
        setNewGroupRole={[Function]}
        syncChecked={false}
        team={
          Object {
            "allow_open_invite": false,
            "allowed_domains": "",
            "delete_at": 0,
            "display_name": "team",
            "group_constrained": false,
            "id": "123",
          }
        }
        totalGroups={1}
      />
      <Connect(TeamMembers)
        onAddCallback={[Function]}
        onRemoveCallback={[Function]}
        teamId="123"
        updateRole={[Function]}
        usersToAdd={Object {}}
        usersToRemove={Object {}}
      />
    </div>
  </div>
  <SaveChangesPanel
    cancelLink="/admin_console/user_management/teams"
    onClick={[Function]}
    saveNeeded={false}
    saving={false}
    serverError={null}
  />
</div>
`;

exports[`admin_console/team_channel_settings/team/TeamDetails should match snapshot with isLocalArchived true 1`] = `
<div
  className="wrapper--fixed"
>
  <div
    className="admin-console__header with-back"
  >
    <div>
      <Connect(BlockableLink)
        className="fa fa-angle-left back"
        to="/admin_console/user_management/teams"
      />
      <MemoizedFormattedMessage
        defaultMessage="Team Configuration"
        id="admin.team_settings.team_detail.group_configuration"
      />
    </div>
  </div>
  <div
    className="admin-console__wrapper"
  >
    <div
      className="admin-console__content"
    >
      <TeamProfile
        isArchived={true}
        onToggleArchive={[Function]}
        team={
          Object {
            "allow_open_invite": false,
            "allowed_domains": "",
            "delete_at": 16465313,
            "display_name": "team",
            "group_constrained": false,
            "id": "123",
          }
        }
      />
      <ConfirmModal
        confirmButtonClass="btn btn-primary"
        confirmButtonText={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Archive"
            id="admin.team_settings.team_detail.archive_confirm.button"
          />
        }
        message={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Saving will archive the team and make its contents inaccessible for all users. Are you sure you wish to save and archive this team?"
            id="admin.team_settings.team_detail.archive_confirm.message"
          />
        }
        modalClass=""
        onCancel={[Function]}
        onConfirm={[Function]}
        show={false}
        title={
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Save and Archive Team"
            id="admin.team_settings.team_detail.archive_confirm.title"
          />
        }
      />
    </div>
  </div>
  <SaveChangesPanel
    cancelLink="/admin_console/user_management/teams"
    onClick={[Function]}
    saveNeeded={false}
    saving={false}
    serverError={null}
  />
</div>
`;
